--- a/Data_Processing/MIDI_conversion2.ipynb
+++ b/Data_Processing/MIDI_conversion2.ipynb
@@ -6,17 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mido\n",
+    "import mido \n",
     "from mido import MidiFile, Message, MidiTrack\n",
     "import torch\n",
     "import os\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "os.chdir('D:\\engsci\\year 3\\CLASS\\APS360\\Project') #Sets current working directory!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://medium.com/analytics-vidhya/convert-midi-file-to-numpy-array-in-python-7d00531890c  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +37,14 @@
     "        if file.endswith(\".midi\"):\n",
     "            fileCount += 1\n",
     "            midiDir = MidiFile(directory+\"/\"+file)\n",
-    "            for track in midiDir.tracks:\n",
-    "                trackCount += 1\n",
+    "            for track in midiDir.tracks: # Locates the tracks in a 'song.midi'\n",
+    "                trackCount += 1 # Counts tracks.\n",
     "    print(fileCount+\" files\")\n",
     "    print(trackCount+\" tracks\")\n",
     "\n",
     "    \n",
     "def PrintMessages(mid):                # print midi messages\n",
-    "    for i, track in enumerate(mid.tracks):\n",
+    "    for i, track in enumerate(mid.tracks): # Iterates through tracks and also outputs the index.\n",
     "        print('Track {}: {}'.format(i, track.name))\n",
     "        for msg in track:\n",
     "            print(msg)\n",
@@ -49,36 +59,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Midi2Numpy(mid):                                #converts to numpy array removing non-note messages\n",
     "    track = mid.tracks[1]                           #0th track only contains meta-messages, all notes on 1st track\n",
-    "    notes = np.empty([0,4])\n",
+    "    notes = np.empty([0,4])                         #4 because we're tracking: note, velocity,time and sustain.\n",
     "    time = 0\n",
     "    for msg in track:\n",
     "        if msg.type == \"note_on\":                   # only count \"note\" messages - other inputs i.e. foot pedals are ignored\n",
+    "            #if msg[1] > 0: ?\n",
     "            notes = np.append(notes,np.array([[msg.note, msg.velocity, msg.time + time, 0]]),axis=0)         # (note, velocity, time, sustain)\n",
     "            time = 0\n",
     "        else:\n",
-    "            time += msg.time                        #adjust time when removing other messages\n",
+    "            time += msg.time                        #adjust time when removing other messages (time is length of note? start time of notes from start of song?)\n",
     "    return notes\n",
     "\n",
     "\n",
-    "def NumpyGetSustain(notes):\n",
+    "def NumpyGetSustain(notes):                       # Removes the zeroes\n",
     "    for i, msg in enumerate(notes):\n",
-    "        if msg[1] > 0:                            # if velocity is not 0\n",
+    "        if msg[1] > 0:                            # if velocity is not 0 (if note is being turned on)\n",
     "            j = 1\n",
     "            sustain = 0\n",
     "            while msg[0] != notes[i+j][0]:        # while note values are different\n",
-    "                sustain += notes[i+j][2]\n",
+    "                sustain += notes[i+j][2]          # Update sustain of ith note with i+jth note's time.\n",
     "                j += 1                            #search for next message with same note i.e. message telling that note was released\n",
-    "            notes[i,3] = sustain + notes[i+j][2]\n",
+    "            notes[i,3] = sustain + notes[i+j][2]  # once next appearance of note identified, updat ith note's sustain as time on until next note.\n",
     "    time = 0\n",
-    "    for i, msg in enumerate(notes):\n",
-    "        if msg[1] > 0:\n",
-    "            notes[i,2] += time\n",
+    "    for i, msg in enumerate(notes):                #What is this doing?\n",
+    "        if msg[1] > 0:                            # If velocity is not 0\n",
+    "            notes[i,2] += time                    # Update the ith note's time with 0?\n",
     "            time = 0\n",
     "        else:\n",
     "            time += msg[2]                        #adjust time\n",
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -317,36 +328,80 @@
     "mid = MidiFile('testSong.midi')\n",
     "#cleanupMessages(mid)\n",
     "#mid.save(\"processed.midi\")\n",
-    "PrintSomeMessages(mid)"
+    "PrintSomeMessages(mid) #prints first 200 msg is track 1 of mid.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before adding sustain: \n",
+      " [[ 67.  74. 762.   0.]\n",
+      " [ 39.  53.  15.   0.]\n",
+      " [ 63.  55.   5.   0.]\n",
+      " ...\n",
+      " [ 79.   0.  14.   0.]\n",
+      " [ 82.   0.   3.   0.]\n",
+      " [ 75.   0.   1.   0.]] \n",
+      "\n",
+      "after sustain is added: \n",
+      " [[ 67.  74. 762. 749.]\n",
+      " [ 39.  53.  15.  82.]\n",
+      " [ 63.  55.   5. 412.]\n",
+      " ...\n",
+      " [ 82.  92.   1. 472.]\n",
+      " [ 79.  95.   1. 468.]\n",
+      " [ 39.  90.   3. 437.]]\n",
+      "0.23337793350219727\n",
+      "number of samples in array:  7986\n"
+     ]
+    }
+   ],
    "source": [
     "t0 = time.time()\n",
     "\n",
     "mid = MidiFile('testSong.midi')\n",
     "notes = Midi2Numpy(mid)\n",
+    "print('before adding sustain: \\n',notes,'\\n')\n",
     "cleanNotes = NumpyGetSustain(notes)\n",
+    "print('after sustain is added: \\n',cleanNotes)\n",
     "np.savetxt(\"test.csv\", cleanNotes, delimiter=\",\")\n",
     "\n",
     "t1 = time.time()\n",
-    "print(t1-t0)"
+    "print(t1-t0)\n",
+    "print('number of samples in array: ',notes.shape[0])\n",
+    "#print(notes) #Shouldn't first time be 28?\n",
+    "\n",
+    "#Save the cleanNotes for testing:\n",
+    "import numpy\n",
+    "numpy.save('cleanNotes',cleanNotes)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-8-b4953c974c2f>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-b4953c974c2f>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    #Not yet finished...\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def CSV2Numpy(file):\n",
     "    notes = np.getfromtxt(file,delimiter=\",\")\n",
     "    for i,n in enumerate(notes):\n",
-    "        \n"
+    "        \n",
+    "#Not yet finished..."
    ]
   },
   {
@@ -393,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
