--- a/Data_Processing/MIDI_backconversion.ipynb
+++ b/Data_Processing/MIDI_backconversion.ipynb
@@ -16,7 +16,7 @@
     "import glob  \n",
     "from tqdm import tqdm\n",
     "\n",
-    "# os.chdir('D:\\engsci\\year 3\\CLASS\\APS360\\Project') #Sets current working directory!\n",
+    "os.chdir('D:\\engsci\\year 3\\CLASS\\APS360\\Project') #Sets current working directory!\n",
     "# from midiutil.MidiFile import MIDIFile"
    ]
   },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +73,15 @@
     "        #print(note)\n",
     "        sustain = note[3]                   # Get how long the note is on for.\n",
     "        #print(sustain)\n",
-    "        j = 1\n",
-    "        track.append(Message('note_on',note = array[i,0], velocity = array[i,1],time = array[i,2])) # Add the note to the track.\n",
+    "        j = 1                               #\n",
+    "        if i not in already_added:\n",
+    "            track.append(Message('note_on',note = array[i,0], velocity = array[i,1],time = array[i,2])) # Add the note start to the track.\n",
     "        while (i+j <= array.shape[0]-1) and (sustain > array[i+j,2]):       \n",
     "            # ^^ If sustain is longer than the time to the next note or we reached the last note...\n",
     "            if (i+j) not in already_added:\n",
     "#                 print('not already added')\n",
     "                track.append(Message('note_on',note = array[i+j,0], velocity = array[i+j,1],time = array[i+j,2]))\n",
-    "                already_added.append([i+j])\n",
+    "                already_added.append([i+j]) #Remember that we already added the start of this note.\n",
     "#                 print('updated already_apped list')\n",
     "            sustain = sustain - array[i+j,2] # Subtract the time to the next note.\n",
     "            j += 1 #update index to check agains.\n",
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,24 +118,31 @@
     }
    ],
    "source": [
-    "# #load in the cleanNotes file:\n",
-    "# import numpy\n",
-    "# cleanNotes = numpy.load('cleanNotes.npy')\n",
-    "# print(cleanNotes)\n",
-    "# cleanNotes = cleanNotes.astype('int')\n",
-    "# print(cleanNotes)\n",
-    "# print(cleanNotes.shape[0]-1)"
+    "#load in the cleanNotes file:\n",
+    "import numpy\n",
+    "cleanNotes = numpy.load('cleanNotes.npy')\n",
+    "print(cleanNotes)\n",
+    "cleanNotes = cleanNotes.astype('int')\n",
+    "print(cleanNotes)\n",
+    "print(cleanNotes.shape[0]-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test = Numpy2Midi(cleanNotes)\n",
-    "# test.save('test_song_back.mid')"
+    "test = Numpy2Midi(cleanNotes)\n",
+    "test.save('test_song_back.mid')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
