--- a/Project_workbook.ipynb
+++ b/Project_workbook.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     "            time = 0\n",
     "        else:\n",
     "            time += msg.time                        #adjust time when removing other messages\n",
-    "    return notes.astype(int)\n",
+    "    return notes\n",
     "\n",
     "\n",
     "def NumpyGetSustain(note):\n",
@@ -154,11 +154,21 @@
     "    notes = notes[notes[:,1] > 0]                 #filter for notes with positive velocities (note presses)\n",
     "    return notes\n",
     "\n",
+    "def NumpyNormalize(note):                         #normalize all values to 0-1\n",
+    "    notes = np.copy(note)\n",
+    "    for i, msg in enumerate(notes):\n",
+    "        notes[i,0] = msg[0]/128\n",
+    "        notes[i,1] = msg[1]/128\n",
+    "        notes[i,2] = msg[2]/40000\n",
+    "        notes[i,3] = msg[3]/40000    \n",
+    "    return notes\n",
+    "\n",
     "def Midi2Numpy(path): # full midi to numpy conversion\n",
     "    mid = MidiFile(path)\n",
     "    notes = Midi2NumpyNoSustain(mid)\n",
     "    cleanNotes = NumpyGetSustain(notes)\n",
-    "    return cleanNotes"
+    "    normNotes = NumpyNormalize(cleanNotes)\n",
+    "    return normNotes"
    ]
   },
   {
@@ -170,10 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def NumpyDenormalize(note): # interpret all values from 0-1 to normal values\n",
+    "    notes = np.copy(note)\n",
+    "    for i, msg in enumerate(notes):\n",
+    "        notes[i,0] = msg[0]*128\n",
+    "        notes[i,1] = msg[1]*128\n",
+    "        notes[i,2] = msg[2]*40000\n",
+    "        notes[i,3] = msg[3]*40000\n",
+    "    return notes.astype(int)\n",
+    "\n",
     "def NumpySequence(notes): # put all ntoes into a \"timeline\" i.e.: time values of [10, 20, 10, 30] become [10, 30, 40, 70]\n",
     "    sequenced = np.copy(notes)                      # this allows us to easily add vel=0 notes in any order since we can later sort them by time\n",
     "    for i, msg in enumerate(sequenced):\n",
@@ -219,11 +238,56 @@
     "    return mid\n",
     "\n",
     "def Numpy2Midi(notes, name): # full numpy to midi conversion, saving result to [name].midi\n",
-    "    seq = NumpySequence(notes)\n",
+    "    denorm = NumpyDenormalize(notes)\n",
+    "    seq = NumpySequence(denorm)\n",
     "    off = NumpyAddOffNotes(seq)\n",
     "    unseq = NumpyUnsequence(off)\n",
     "    mid = Numpy2MidiDirect(unseq)\n",
     "    mid.save(name + \".midi\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bulk data conversion code - COMMNENT OUT IF NOT IN USE!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORTANT: COMMENT OUT IF NOT IN USE TO AVOID ACCIDENTS!!!!!!!\n",
+    "\n",
+    "# Getting CSVs from MIDI data\n",
+    "\n",
+    "# dataPath = \"data/MIDI_files_original/\"\n",
+    "# outputPath = \"data/numpy_files/\"\n",
+    "# for i,f in enumerate(os.listdir(dataPath)):\n",
+    "#     notes = Midi2Numpy(dataPath+f)\n",
+    "#     np.savetxt(outputPath + \"MIDI_{:04d}.csv\".format(i),notes,delimiter=\",\")\n",
+    "    \n",
+    "#     if i % 10 == 0:\n",
+    "#         print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataPath = \"data/numpy_files/\"\n",
+    "# outputPath = \"data/MIDI_files_processed/\"\n",
+    "\n",
+    "# for i,f in enumerate(os.listdir(dataPath)):\n",
+    "#     notes = np.genfromtxt(dataPath+f, delimiter=\",\").astype(int)\n",
+    "#     Numpy2Midi(notes, outputPath + \"MIDI_{:04d}\".format(i))\n",
+    "    \n",
+    "#     if i % 10 == 0:\n",
+    "#         print(i)"
    ]
   },
   {
