Code to generate tensor dataset
dataset download link in data/readme.txt

--- a/Project_workbook.ipynb
+++ b/Project_workbook.ipynb
@@ -250,7 +250,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Generatng tensor dataset from CSVs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Numpy2Dataset(notes,num=20,skip=10): # make list of sumpy arrays\n",
+    "    samples = []\n",
+    "    i = 0\n",
+    "    while i+num <= len(notes):\n",
+    "        samples.append(notes[i:i+num])\n",
+    "        i += skip\n",
+    "    return samples\n",
+    "\n",
+    "def SampleAllNumpy(dataPath): # generate samples from all saved CSVs\n",
+    "    allSamples = []\n",
+    "\n",
+    "    for i,f in enumerate(os.listdir(dataPath)):\n",
+    "        notes = np.genfromtxt(dataPath+f, delimiter=',')\n",
+    "        allSamples += Numpy2Dataset(notes)\n",
+    "        if i % 100 == 0:\n",
+    "            print(i)\n",
+    "    \n",
+    "    return allSamples\n",
+    "\n",
+    "def SaveSamplesTensor(samples, outputPath): # save tensor\n",
+    "    tens = torch.Tensor(samples)\n",
+    "    torch.save(samples, outputPath+\"Notes_Dataset.pt\")\n",
+    "    return tens   \n",
+    "\n",
+    "def SaveAllSamples(dataPath, outputPath): # save dataset tensor\n",
+    "    samples = SampleAllNumpy(dataPath)\n",
+    "    SaveSamplesTensor(samples, outputPath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Bulk data conversion code - COMMENT OUT IF NOT IN USE!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SaveAllSamples(\"data/numpy_files/\",\"data/\") #save all into tensor"
    ]
   },
   {
@@ -432,7 +483,7 @@
     "        self.notes = self.InsertLine(self.notes, self.tenor.notes, 2, 4)\n",
     "        self.notes = self.InsertLine(self.notes, self.bass.notes, 3, 5)\n",
     "        \n",
-    "    def OffsetTime(self, maxChange): # adds random time offsets to make output more organic\n",
+    "    def OffsetTime(self, maxChange): # adds random time offsets to make output sound more organic\n",
     "        for note in self.notes:\n",
     "            note[2] += random.randint(0,maxChange)\n",
     "        "
