--- a/Project_workbook.ipynb
+++ b/Project_workbook.ipynb
@@ -44,6 +44,10 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "from torch.utils.data import TensorDataset, DataLoader, random_split\n",
+    "\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
     "\n",
     "import time # Tracking model training time.\n",
     "\n",
@@ -300,33 +304,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Numpy2Dataset(notes,num=20,skip=10): # make list of sumpy arrays\n",
+    "def Numpy2Dataset(notes,num=21,skip=21): # make list of sumpy arrays\n",
     "    samples = []\n",
+    "    targets = []\n",
     "    i = 0\n",
     "    while i+num <= len(notes):\n",
-    "        samples.append(notes[i:i+num])\n",
+    "        samples.append(notes[i:i+num-1])\n",
+    "        targets.append(notes[i+num-1])\n",
     "        i += skip\n",
-    "    return samples\n",
+    "    return samples, targets\n",
     "\n",
     "def SampleAllNumpy(dataPath): # generate samples from all saved CSVs\n",
     "    allSamples = []\n",
+    "    allTargets = []\n",
     "\n",
     "    for i,f in enumerate(os.listdir(dataPath)):\n",
     "        notes = np.genfromtxt(dataPath+f, delimiter=',')\n",
-    "        allSamples += Numpy2Dataset(notes)\n",
+    "        samples, targets = Numpy2Dataset(notes)\n",
+    "        allSamples += samples\n",
+    "        allTargets += targets\n",
     "        if i % 100 == 0:\n",
     "            print(i)\n",
+    "            \n",
+    "    random.seed(0)\n",
+    "    random.shuffle(allSamples)\n",
+    "    random.seed(0)\n",
+    "    random.shuffle(allTargets)\n",
     "    \n",
-    "    return allSamples\n",
+    "    return allSamples, allTargets\n",
     "\n",
-    "def SaveSamplesTensor(samples, outputPath): # save tensor\n",
+    "def SaveSamplesTensor(samples, targets, outputPath, name=\"Notes_Dataset\"): # save tensor\n",
     "    tens = torch.Tensor(samples)\n",
-    "    torch.save(samples, outputPath+\"Notes_Dataset.pt\")\n",
+    "    targ = torch.Tensor(targets)\n",
+    "    dataset = TensorDataset(tens,targ)\n",
+    "    torch.save(dataset, outputPath+name+\".pt\")\n",
     "    return tens   \n",
     "\n",
-    "def SaveAllSamples(dataPath, outputPath): # save dataset tensor\n",
-    "    samples = SampleAllNumpy(dataPath)\n",
-    "    SaveSamplesTensor(samples, outputPath)"
+    "def SaveAllSamples(dataPath, outputPath, name=\"Notes_Dataset\"): # save dataset tensor\n",
+    "    samples, targets = SampleAllNumpy(dataPath)\n",
+    "    SaveSamplesTensor(samples, targets, outputPath, name)\n",
+    "    \n",
+    "def SplitSamples(dataset, ranges):\n",
+    "    torch.maual_seed(0)\n",
+    "    trainData, valData, testData = random_split(oneHotDataset, splitRange)\n",
+    "    return trainData, valData, testData "
    ]
   },
   {
@@ -342,7 +363,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SaveAllSamples(\"data/numpy_files/\",\"data/\") #save all into tensor"
+    "# #SaveAllSamples(\"data/numpy_onehot/\",\"data/onehot_data/\",\"onehot\") #save all into tensor\n",
+    "\n",
+    "# oneHotDataset = torch.load(\"data/onehot_data/onehot.pt\")\n",
+    "\n",
+    "# splitProp = np.array([0.9, 0.05 , 0.05]) # 90/5/5% split\n",
+    "# splitRange = len(oneHotDataset)*splitProp\n",
+    "# splitRange[0] += 1                           # so numbers add up\n",
+    "# splitRange = splitRange.astype(int)\n",
+    "\n",
+    "# length = len(oneHotDataset)\n",
+    "# a = 0.9*length\n",
+    "# a = int(a)\n",
+    "\n",
+    "# b = 0.95*length\n",
+    "# b = int(b)\n",
+    "\n",
+    "# tiny = oneHotDataset[:30]\n",
+    "# train = oneHotDataset[:a]\n",
+    "# val = oneHotDataset[a:b]\n",
+    "# test = oneHotDataset[b:]\n",
+    "\n",
+    "# tinyData = TensorDataset(tiny[0].clone(), tiny[1].clone())\n",
+    "# trainData = TensorDataset(train[0].clone(),train[1].clone())\n",
+    "# valData = TensorDataset(val[0].clone(),val[1].clone())\n",
+    "# testData = TensorDataset(test[0].clone(),test[1].clone())\n",
+    "\n",
+    "# torch.save(tinyData,\"data/onehot_data/tinyDataOneHot.pt\")\n",
+    "# torch.save(trainData,\"data/onehot_data/trainDataOneHot.pt\")\n",
+    "# torch.save(valData,\"data/onehot_data/valDataOneHot.pt\")\n",
+    "# torch.save(testData,\"data/onehot_data/testDataOneHot.pt\")"
    ]
   },
   {
@@ -634,6 +684,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "dnwzsoywdg6O"
+   },
+   "outputs": [],
+   "source": [
+    "def get_accuracy(model, train=False):\n",
+    "    if train:\n",
+    "        data = trainLoader\n",
+    "    else:\n",
+    "        data = valLoader\n",
+    "        \n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    for imgs, labels in data:\n",
+    "\n",
+    "        \n",
+    "        imgs = imgs.cuda()\n",
+    "        labels = labels.cuda()        \n",
+    "        \n",
+    "        output = model(imgs)        \n",
+    "        #select index with maximum prediction score\n",
+    "        pred = output.max(1, keepdim=True)[1]\n",
+    "        correct += pred.eq(labels.view_as(pred)).sum().item()\n",
+    "        total += imgs.shape[0]\n",
+    "    return correct / total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "JchuI0fXdj6V"
+   },
+   "outputs": [],
+   "source": [
+    "def train(model, batch_size=30, learning_rate=0.001, num_epochs=1, model_name=\"model\"):\n",
+    "    criterion = nn.CrossEntropyLoss() \n",
+    "    optimizer = optim.SGD(model.parameters(), lr=learning_rate, momentum=0.9) # Cross-Entropy Loss and SGD are commonly used for classification problems\n",
+    "\n",
+    "    iters, losses, train_acc, val_acc = [], [], [], []\n",
+    "    \n",
+    "    maxModel = model.parameters()\n",
+    "    maxVal = 0\n",
+    "\n",
+    "    # training\n",
+    "    n = 0 # the number of iterations\n",
+    "    for epoch in range(num_epochs):\n",
+    "        for imgs, labels in iter(trainLoader):\n",
+    "            \n",
+    "            \n",
+    "            imgs = imgs.cuda()\n",
+    "            labels = labels.cuda()\n",
+    "            \n",
+    "            out = model(imgs)             # forward pass\n",
+    "\n",
+    "            loss = criterion(out, labels) # compute the total loss\n",
+    "            loss.backward()               # backward pass (compute parameter updates)\n",
+    "            optimizer.step()              # make the updates for each parameter\n",
+    "            optimizer.zero_grad()         # a clean up step for PyTorch\n",
+    "\n",
+    "            # save the current training information\n",
+    "            iters.append(n)\n",
+    "            losses.append(float(loss)/batch_size)             # compute *average* loss\n",
+    "            train_acc.append(get_accuracy(model, train=True)) # compute training accuracy\n",
+    "            valAccuracy = get_accuracy(model, train=False)\n",
+    "            val_acc.append(valAccuracy)  # compute validation accuracy\n",
+    "            \n",
+    "            if valAccuracy > maxVal and valAccuracy > 0.6:\n",
+    "                maxVal = valAccuracy\n",
+    "                torch.save(model.state_dict(), model_name)\n",
+    "                print(\"Validation record in iteration {}: {}\".format(n, maxVal)) # save model when validation accuracy is higher than previous runs\n",
+    "            \n",
+    "            n += 1\n",
+    "            if n % 100 == 0:\n",
+    "                print(n)\n",
+    "\n",
+    "    # plotting\n",
+    "    plt.title(\"Training Curve\")\n",
+    "    plt.plot(iters, losses, label=\"Train\")\n",
+    "    plt.xlabel(\"Iterations\")\n",
+    "    plt.ylabel(\"Loss\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.title(\"Training Curve\")\n",
+    "    plt.plot(iters, train_acc, label=\"Train\")\n",
+    "    plt.plot(iters, val_acc, label=\"Validation\")\n",
+    "    plt.xlabel(\"Iterations\")\n",
+    "    plt.ylabel(\"Training Accuracy\")\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(\"Final Training Accuracy: {}\".format(train_acc[-1]))\n",
+    "    print(\"Final Validation Accuracy: {}\".format(val_acc[-1]))\n",
+    "    \n",
+    "    return maxModel"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -645,6 +799,254 @@
    "metadata": {},
    "source": [
     "Set the hyperparameters below:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(1)\n",
+    "class MusicGenerator(nn.Module):\n",
+    "    def __init__(self, input_size=16, hidden_size=128):\n",
+    "        super(MusicGenerator, self).__init__()\n",
+    "        self.name = \"SergModel\"\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.input_size = input_size\n",
+    "        self.rnn = nn.LSTM(self.input_size, self.hidden_size, batch_first = True)\n",
+    "        #^^Expects data as: (batch_size,sequence,features)\n",
+    "        self.fc1 = nn.Linear(self.hidden_size, 32)\n",
+    "        self.fc2 = nn.Linear(32,16)\n",
+    "        self.sig = nn.Sigmoid()\n",
+    "        #self.linear = nn.Linear(self.hidden_size, 4) #Regression problem.\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h0 = torch.zeros(1,x.size(0),self.hidden_size)\n",
+    "        h0 = h0.cuda()\n",
+    "        c0 = torch.zeros(1,x.size(0),self.hidden_size)\n",
+    "        c0 = c0.cuda()\n",
+    "        out,(h0,c0) = self.rnn(x,(h0,c0))\n",
+    "        x = F.relu(out)\n",
+    "        x = F.relu(self.fc1(x)) # 2 fully connected layers\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.sig(x)\n",
+    "        pred = x[:,-1,:]\n",
+    "        \n",
+    "        return pred\n",
+    "    \n",
+    "print('Model class created succesfully')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "valData = torch.load(\"data/onehot_data/valDataOneHot.pt\")\n",
+    "overfitData = valData\n",
+    "overfitData = list(overfitData)\n",
+    "\n",
+    "#print(len(overfitData))\n",
+    "overfitBatch = 256\n",
+    "\n",
+    "#overfitLoader = torch.utils.data.DataLoader(overfitData, batch_size=overfitBatch, shuffle=False)\n",
+    "\n",
+    "def OverfitAccuracy(model):\n",
+    "    data = overfitData\n",
+    "\n",
+    "    err = 0\n",
+    "    total = 0\n",
+    "    for imgs, labels in torch.utils.data.DataLoader(data, batch_size=overfitBatch):\n",
+    "        imgs = imgs.cuda()\n",
+    "        labels = labels.cuda()\n",
+    "          \n",
+    "        output = model(imgs)\n",
+    "        #select index with maximum prediction score\n",
+    "        lab = labels.view_as(output)\n",
+    "        \n",
+    "        error = abs(output-lab).sum().item()\n",
+    "        \n",
+    "        err += error/16\n",
+    "        total += imgs.shape[0]\n",
+    "    totalError = err / total\n",
+    "#     if accuracy > 0.5:\n",
+    "#         print(pred)\n",
+    "#         print(labels.view_as(pred))\n",
+    "    #print(output[0])\n",
+    "    #print(lab[0])\n",
+    "#     print(error)\n",
+    "#     print()\n",
+    "#     print(accuracy)\n",
+    "    return totalError\n",
+    "\n",
+    "def OverfitTrain(model, data, batch_size=overfitBatch, num_epochs=1):\n",
+    "    train_loader = torch.utils.data.DataLoader(data, batch_size=overfitBatch)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "    iters, losses, train_acc, val_acc = [], [], [], []\n",
+    "    \n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"using cuda\")\n",
+    "\n",
+    "    # training\n",
+    "    n = 0 # the number of iterations\n",
+    "    for epoch in range(num_epochs):\n",
+    "        for imgs, labels in iter(train_loader):\n",
+    "          \n",
+    "            if torch.cuda.is_available():\n",
+    "                imgs = imgs.cuda()\n",
+    "                labels = labels.cuda()\n",
+    "              \n",
+    "            out = model(imgs)             # forward pass\n",
+    "\n",
+    "            loss = criterion(out, labels) # compute the total loss\n",
+    "            #print(float(loss)/batch_size)\n",
+    "            loss.backward()               # backward pass (compute parameter updates)\n",
+    "            optimizer.step()              # make the updates for each parameter\n",
+    "            optimizer.zero_grad()         # a clean up step for PyTorch\n",
+    "\n",
+    "            # save the current training information\n",
+    "            iters.append(n)\n",
+    "            losses.append(float(loss)/batch_size)             # compute *average* loss\n",
+    "            train_acc.append(OverfitAccuracy(model)) # compute training accuracy \n",
+    "            n += 1\n",
+    "            if n % 1 == 0:\n",
+    "                print(n)\n",
+    "            \n",
+    "\n",
+    "    # plotting\n",
+    "    plt.title(\"Overfit Curve\")\n",
+    "    plt.plot(iters, losses, label=\"Train\")\n",
+    "    plt.xlabel(\"Iterations\")\n",
+    "    plt.ylabel(\"Loss\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.title(\"Training Curve\")\n",
+    "    plt.plot(iters, train_acc, label=\"Train\")\n",
+    "    plt.xlabel(\"Iterations\")\n",
+    "    plt.ylabel(\"Training Error\")\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(\"Final Training Accuracy: {}\".format(train_acc[-1]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OverfitAccuracy(overfitModel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(2)\n",
+    "overfitModel = MusicGenerator()\n",
+    "overfitModel = overfitModel.cuda()\n",
+    "OverfitTrain(overfitModel, overfitData, num_epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tinyData[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = torch.utils.data.DataLoader(tinyData, batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iii = 0\n",
+    "for a, b in iter(loader): \n",
+    "    if iii == 0:\n",
+    "        a = a.cuda()\n",
+    "        print(overfitModel(a))\n",
+    "        print(b)\n",
+    "        print()\n",
+    "    iii += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overfitModel(tinyData[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "DBJDwaqA82_0",
+    "outputId": "8a0957ac-776b-4b45-aca4-75271bd17155"
+   },
+   "outputs": [],
+   "source": [
+    "class RNNMusicGenerator(nn.Module): #GRU based\n",
+    "    def __init__(self, input_size = 16, hidden_size = 64):\n",
+    "        super(RNNMusicGenerator, self).__init__()\n",
+    "        self.name = \"LSTM_Reg_ws20_simple_model\"\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.input_size = input_size\n",
+    "        self.rnn = nn.LSTM(self.input_size, self.hidden_size, batch_first = True)\n",
+    "#         self.rnn1 = nn.LSTM(self.hidden_size, self.hidden_size, batch_first = True)\n",
+    "        self.rnn1 = nn.LSTM(self.hidden_size, self.hidden_size, batch_first = True)\n",
+    "        #^^Expects data as: (batch_size,sequence,features)\n",
+    "        self.linear1 = nn.Linear(self.hidden_size, 32)\n",
+    "        self.linear2 = nn.Linear(32,16)\n",
+    "        self.linear = nn.Linear(self.hidden_size, 4) #Regression problem.\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h0 = torch.zeros(1,x.size(0),self.hidden_size)\n",
+    "        c0 = torch.zeros(1,x.size(0),self.hidden_size)\n",
+    "        out,(h0,c0) = self.rnn(x,(h0,c0))\n",
+    "        out = F.relu(out)\n",
+    "#         h1 = torch.zeros(1,x.size(0),self.input_size)\n",
+    "#         c1 = torch.zeros(1,x.size(0),self.input_size)\n",
+    "#         out,(h0,c0) = self.rnn1(out,(h0,c0))\n",
+    "#         out = F.relu(out)\n",
+    "#         out,(h0,c0) = self.rnn1(out,(h0,c0))\n",
+    "#         print(output.shape)\n",
+    "#         out = F.relu(out)\n",
+    "#         output,_ = self.RNN2(output,(None,None)) #No activation function on second layer for now...\n",
+    "#         print(hidden)    \n",
+    "#         out = self.linear1(out[:,-1,:])\n",
+    "#         out = self.linear(out) #Takes the last one...\n",
+    "#         out = F.relu(out)\n",
+    "#         out = self.linear2(out)\n",
+    "#         out = F.relu(out)\n",
+    "        pred = self.linear(out[:,-1,:]) #Takes the last one...\n",
+    "        return pred, True\n",
+    "    \n",
+    "print('Model class created succesfully')"
    ]
   },
   {
