--- a/Project_workbook_2.ipynb
+++ b/Project_workbook_2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,9 +191,9 @@
     "def NumpyNotesOneHot(note):\n",
     "    notes = np.copy(note)\n",
     "    \n",
-    "    oneHot = np.zeros([len(notes),91])\n",
-    "    oneHot[:, 88:] = notes[:, 1:]\n",
-    "    names = notes[:,0]-21\n",
+    "    oneHot = np.zeros([len(notes),131])\n",
+    "    oneHot[:, 128:] = notes[:, 1:]\n",
+    "    names = notes[:,0]\n",
     "    #namesOct = names%12\n",
     "    #oneHot[:,12] = (names-(namesOct))/12\n",
     "    \n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -394,13 +394,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Numpy2Dataset(notes, tgt, num=100,skip=200): # make list of sumpy arrays\n",
+    "def Numpy2Dataset(notes, tgt, num=50,skip=100, train=False): # make list of sumpy arrays\n",
+    "    #mult = [0.8, 3/2, 3, 2, 10.2, 10, 25, 5.5, -1]\n",
+    "    mult = [0.8, 3/2, 3, 2, 10.2, 10, 40, 5.5, -1]\n",
+    "    \n",
     "    samples = []\n",
     "    targets = []\n",
+    "    \n",
+    "    if mult[tgt] == -1:\n",
+    "        return [], []\n",
+    "    \n",
+    "    if train:\n",
+    "        skip = int(skip/mult[tgt])\n",
+    "    \n",
     "    i = 0\n",
     "    while i+num <= len(notes):\n",
     "        samples.append(notes[i:i+num])\n",
@@ -408,7 +418,7 @@
     "        i += skip\n",
     "    return samples, targets\n",
     "\n",
-    "def SampleAllNumpy(dataPath): # generate samples from all saved CSVs\n",
+    "def SampleAllNumpy(dataPath, train=False): # generate samples from all saved CSVs\n",
     "    allSamples = []\n",
     "    allTargets = []\n",
     "\n",
@@ -416,7 +426,7 @@
     "        notes = np.genfromtxt(dataPath+f, delimiter=',')\n",
     "        tgt = GetGroup(f)\n",
     "                             \n",
-    "        samples, targets = Numpy2Dataset(notes, tgt)\n",
+    "        samples, targets = Numpy2Dataset(notes, tgt, train=train)\n",
     "        allSamples += samples\n",
     "        allTargets += targets\n",
     "        if i % 100 == 0:\n",
@@ -425,9 +435,21 @@
     "    random.seed(0)\n",
     "    random.shuffle(allSamples)\n",
     "    random.seed(0)\n",
-    "    random.shuffle(allTargets) # shuffle samples and targets in the exact same way\n",
+    "    random.shuffle(allTargets) # shuffle samples and targets in the exact same way   \n",
+    "    \n",
+    "    #print(CountTargets(allTargets))\n",
     "    \n",
     "    return allSamples, allTargets\n",
+    "\n",
+    "def CountTargets(targets, balance=10000):\n",
+    "    count = [0,0,0,0,0,0,0,0,0,0]\n",
+    "    \n",
+    "    for tgt in targets:\n",
+    "        count[tgt] += 1\n",
+    "        \n",
+    "    bal = np.array([10000,10000,10000,10000,10000,10000,10000,10000,10000,10000])\n",
+    "\n",
+    "    return (np.array(count)-bal)\n",
     "\n",
     "def SaveSamplesTensor(samples, targets, outputPath, name=\"Notes_Dataset\"): # save tensor\n",
     "    tens = torch.Tensor(samples)\n",
@@ -436,19 +458,29 @@
     "    torch.save(dataset, outputPath+name+\".pt\")\n",
     "    return tens   \n",
     "\n",
-    "def SaveAllSamples(dataPath, outputPath, name=\"Notes_Dataset\"): # save dataset tensor\n",
-    "    samples, targets = SampleAllNumpy(dataPath)\n",
+    "def SaveAllSamples(dataPath, outputPath, name=\"Notes_Dataset\", train=False): # save dataset tensor\n",
+    "    samples, targets = SampleAllNumpy(dataPath, train=train)\n",
     "    SaveSamplesTensor(samples, targets, outputPath, name)\n",
     "    \n",
     "def SplitSamples(dataset, ranges):\n",
     "    torch.maual_seed(0)\n",
     "    trainData, valData, testData = random_split(oneHotDataset, splitRange)\n",
-    "    return trainData, valData, testData "
+    "    return trainData, valData, testData \n",
+    "\n",
+    "def CountLabels(ds):\n",
+    "    count = [0,0,0,0,0,0,0,0,0,0,0]\n",
+    "    \n",
+    "    for img, label in iter(ds):\n",
+    "        lab = label.int().item()\n",
+    "        count[lab] += 1\n",
+    "        \n",
+    "    #print(count)\n",
+    "    return(count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,35 +490,23 @@
     "    if program < 8:\n",
     "        return 1 # piano\n",
     "    if program < 16:\n",
-    "        return 8 # pitched percussion\n",
+    "        return 8 # other - not used\n",
     "    if program < 24:\n",
-    "        return 7 # organ\n",
+    "        return 1 # organ -> piano\n",
     "    if program < 32:\n",
     "        return 3 # guitar\n",
     "    if program < 40:\n",
     "        return 2 # bass\n",
-    "    if program < 48:\n",
-    "        return 9 # string\n",
     "    if program < 56:\n",
-    "        return 10 # ensemble\n",
+    "        return 7 # ensemble/string\n",
     "    if program < 64:\n",
     "        return 4 # brass \n",
-    "    if program < 72:\n",
-    "        return 5 # reed\n",
     "    if program < 80:\n",
-    "        return 11 # pipe\n",
+    "        return 5 # woodwinds\n",
     "    if program < 88:\n",
     "        return 6 # synth lead\n",
-    "    if program < 96:\n",
-    "        return 12 # synth pad\n",
-    "    if program < 104:\n",
-    "        return 13 # synth efects\n",
-    "    if program < 112:\n",
-    "        return 14 # ethnic\n",
-    "    if program < 120:\n",
-    "        return 15 # percusson\n",
     "    else:\n",
-    "        return 16 # other \n",
+    "        return 8 # other - not used\n",
     "    \n",
     "def GetProgram(name):\n",
     "    prog = name[12:15]\n",
@@ -500,6 +520,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = torch.load(\"data/trainDataClass.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84592"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ds)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -508,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -517,47 +566,14 @@
      "text": [
       "0\n",
       "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n",
-      "2000\n",
-      "2100\n",
-      "2200\n",
-      "2300\n",
-      "2400\n",
-      "2500\n",
-      "2600\n",
-      "2700\n",
-      "2800\n",
-      "0\n",
-      "100\n",
-      "200\n",
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n"
+      "200\n"
      ]
     }
    ],
    "source": [
-    "SaveAllSamples(\"data/jazz/tracks_numpy/train/\",\"data/\",\"trainDataClass\") #save all into tensor\n",
-    "SaveAllSamples(\"data/jazz/tracks_numpy/val/\",\"data/\",\"valDataClass\") #save all into tensor\n",
-    "SaveAllSamples(\"data/jazz/tracks_numpy/test/\",\"data/\",\"testDataClass\") #save all into tensor\n",
+    "#SaveAllSamples(\"data/jazz/tracks_numpy_onehot/train/\",\"data/\",\"trainDataClassOnehot\", train=True) #save all into tensor\n",
+    "SaveAllSamples(\"data/jazz/tracks_numpy/val/\",\"data/\",\"valDataClass\", train=True) #save all into tensor\n",
+    "#SaveAllSamples(\"data/jazz/tracks_numpy_onehot/test/\",\"data/\",\"testDataClassOnehot\") #save all into tensor\n",
     "\n",
     "# oneHotDataset = torch.load(\"data/onehot_data/onehot.pt\")\n",
     "\n",
@@ -591,160 +607,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = torch.load(\"data/va.pt\")"
+    "#trainData = torch.load(\"data/trainDataClassOnehot.pt\")\n",
+    "valData = torch.load(\"data/valDataClass.pt\")\n",
+    "#testData = torch.load(\"data/testDataClassOnehot.pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(2.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(9.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(2.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(9.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(9.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(9.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(9.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(9.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(2.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n",
-      "tensor(0.)\n",
-      "\n",
-      "tensor(1.)\n",
-      "\n",
-      "tensor(2.)\n",
-      "\n",
-      "tensor(8.)\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[511, 453, 594, 555, 603, 504, 583, 533, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for img, label in iter(a):\n",
-    "    #print(img)\n",
-    "    print(label)\n",
-    "    print()"
+    "CountLabels(valData)"
    ]
   },
   {
@@ -756,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,54 +671,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "song016_prog047_chan12.midi\n",
-      "9\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n",
-      "2000\n",
-      "2100\n",
-      "2200\n",
-      "2300\n",
-      "2400\n",
-      "2500\n",
-      "2600\n",
-      "2700\n",
-      "2800\n",
-      "2900\n",
-      "3000\n",
-      "3100\n",
-      "3200\n",
-      "3300\n",
-      "3400\n",
-      "3500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# IMPORTANT: COMMENT OUT IF NOT IN USE TO AVOID ACCIDENTS!!!!!!!\n",
     "\n",
@@ -855,21 +699,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataPath = \"data/numpy_files/\"  # one-hot encoding on CSVs\n",
-    "# outputPath = \"data/numpy_full/\"\n",
+    "dataPath = \"data/jazz/tracks_numpy_all/\"  # one-hot encoding on CSVs\n",
+    "outputPath = \"data/jazz/tracks_numpy_onehot/\"\n",
     "\n",
-    "# for i,f in enumerate(os.listdir(dataPath)):\n",
-    "#     notes = np.genfromtxt(dataPath+f, delimiter=',')\n",
-    "#     notes = NumpyDenormalize(notes)\n",
-    "#     notes = NumpyNotesOneHot(notes)\n",
-    "#     notes = NumpyNormalize(notes, oneHot=True, full=True)\n",
-    "#     np.savetxt(outputPath + \"MIDI_{:04d}.csv\".format(i),notes,delimiter=\",\")\n",
-    "#     if i % 100 == 0:\n",
-    "#         print(i)"
+    "for i,f in enumerate(os.listdir(dataPath)):\n",
+    "    notes = np.genfromtxt(dataPath+f, delimiter=',')\n",
+    "    notes = NumpyDenormalize(notes)\n",
+    "    notes = NumpyNotesOneHot(notes)\n",
+    "    notes = NumpyNormalize(notes, oneHot=True, full=True)\n",
+    "    np.savetxt(outputPath + f,notes,delimiter=\",\")\n",
+    "    if i % 100 == 0:\n",
+    "        print(i)"
    ]
   },
   {
